--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,3 +5,14 @@ body {
     font-size: 16px;
     padding: 10vh 20px 0 20px;
 }
+
+.slide-fade-enter-active {
+    transition: all .3s ease;
+}
+.slide-fade-leave-active {
+    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-to {
+    transform: translateX(10px);
+    opacity: 0;
+}
