--- a/src/styles/_datatable.scss
+++ b/src/styles/_datatable.scss
@@ -8,7 +8,7 @@
     thead {
         tr {
             th {
-                background-color: #989898;
+                background-color: $datatable-color;
                 border-right: 1px solid $bg-color;
                 padding: .3rem .5rem;
                 span.col {
