--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -5,7 +5,7 @@ $margin-noteform: 30px;
     will-change: display;
     position: fixed;
     bottom: $margin-noteform;
-    left: $margin-noteform;
+    left: 5vw;
     width: calc(90vw - #{$margin-noteform * 2});
     max-width: 400px;
     background-color: #FFF;
