--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,7 +3,11 @@ body {
     background-color: $bg-color;
     font-family: $font-family;
     font-size: 16px;
-    padding: 10vh 20px 0 20px;
+    padding: 10vh 0;
+}
+
+.text-right {
+    text-align: right;
 }
 
 .slide-fade-enter-active {
