Add button color variables

--- a/src/styles/_actionbar.scss
+++ b/src/styles/_actionbar.scss
@@ -11,42 +11,15 @@ $margin-actionbar: 30px;
     width: calc(90vw - #{$margin-actionbar * 2});
     max-width: 700px;
     background-color: $warning-color;
-    color: #fff;
-    border-radius: .3rem;
+    color: $actionbar-text-color;
+    border-radius: 0.3rem;
     width: 90vw;
-    padding: .3rem;
+    padding: 0.3rem;
     .fas {
-        margin: 0 .5rem;
+        margin: 0 0.5rem;
     }
     .btn {
-        background-color: $warning-color;
-        color: #FFF;
-        border-color: #FFF;
-        margin-left: .5rem;
+        margin-left: 0.5rem;
         min-width: 90px;
-        &:hover {
-            background-color: darken($warning-color, 10%);
-            color: #FFF;
-            border-color: #FFF;
-        }
-        &:disabled {
-            color: #ddd;
-            background-color: darken($warning-color, 20%);
-            border-color: #ccc;
-        }
-        &-primary {
-            background-color: #FFF;
-            color: $warning-color;
-            &:hover {
-                background-color: #eee;
-                color: $warning-color;
-                border-color: transparent;                  
-            }
-            &:disabled {
-                background-color: #ddd;
-                color: darken($warning-color, 20%);
-                border-color: transparent;    
-            }
-        }
     }
 }
