--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,6 +1,23 @@
-
 $primary-color: #006699;
-$warning-color: #F01E1E;
+$warning-color: #f01e1e;
 $datatable-color: #989898;
-$bg-color: #F7F7F7;
+$bg-color: #f7f7f7;
 $font-family: 'Roboto', sans-serif;
+
+$noteform-bg-color: #fff;
+
+$statistics-bg-color: #fff;
+$statistics-header-color: #333;
+$statistics-value-color: #777;
+
+$input-focus-color: #80bdff;
+$input-bg-color: #fff;
+$input-border-color: #ced4da;
+$input-text-color: #495057;
+
+$checkbox-tick-color: $primary-color;
+$checkbox-bg-color: #fff;
+$checkbox-border-color: #aaa;
+$checkbox-hover-bg-color: #eee;
+
+$actionbar-text-color: #fff;
