--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,8 @@
 @import './actionbar';
 @import './statistics';
 @import './datatable';
+
+@import './btns/default';
+@import './btns/flat';
+@import './btns/warning';
+@import './btns/warning-primary';
