--- a/src/styles/_btn.scss
+++ b/src/styles/_btn.scss
@@ -1,55 +1,80 @@
-
 .btn {
     display: inline-block;
     font-weight: 400;
-    color: #212529;
     font-family: $font-family;
     text-align: center;
     vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
-    background-color: transparent;
     border: 1px solid transparent;
-    padding: .375rem .75rem;
+    padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
-    border-radius: .2rem;
-    transition: color .15s ease-in-out,
-                background-color .15s ease-in-out,
-                border-color .15s ease-in-out,
-                box-shadow .15s ease-in-out;
-    color: #fff;
-    background-color: $primary-color;
-    border-color: $primary-color;
+    border-radius: 0.2rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    color: var(--btn-text-color);
+    background-color: var(--btn-bg-color);
+    border-color: var(--btn-border-color);
     cursor: pointer;
     &:hover {
-        color: #fff;
-        background-color: darken($primary-color, 10%);
-        border-color: darken($primary-color, 15%);
+        color: var(--btn-text-color);
+        background-color: var(--btn-hover-bg-color);
+        border-color: var(--btn-hover-border-color);
     }
     &:focus {
-        box-shadow: 0 0 0 0.2rem rgba(38,143,255,.5);
+        box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
     }
     &:disabled {
         cursor: not-allowed;
-        background-color: lighten($primary-color, 10%);
-        border-color: lighten($primary-color, 15%);
+        color: var(--btn-disabled-text-color);
+        background-color: var(--btn-disabled-bg-color);
+        border-color: var(--btn-disabled-border-color);
     }
     &-flat {
-        color: $primary-color;
-        background-color: #fff;
-        border-color: #fff;
+        color: var(--btn-flat-text-color);
+        background-color: var(--btn-flat-bg-color);
+        border-color: var(--btn-flat-border-color);
         &:hover {
-            color: darken($primary-color, 10%);
-            background-color: darken(#fff, 5%);
-            border-color: darken(#fff, 10%);
+            color: var(--btn-flat-hover-text-color);
+            background-color: var(--btn-flat-hover-bg-color);
+            border-color: var(--btn-flat-hover-border-color);
         }
         &:disabled {
-            color: lighten($primary-color, 50%);
-            background-color: #fff;
-            border-color: #fff;
+            color: var(--btn-flat-disabled-text-color);
+            background-color: var(--btn-flat-disabled-bg-color);
+            border-color: var(--btn-flat-disabled-border-color);
+        }
+    }
+    &-warning {
+        color: var(--btn-warning-text-color);
+        background-color: var(--btn-warning-bg-color);
+        border-color: var(--btn-warning-border-color);
+        margin-left: 0.5rem;
+        min-width: 90px;
+        &:hover {
+            color: var(--btn-warning-hover-text-color);
+            background-color: var(--btn-warning-hover-bg-color);
+            border-color: var(--btn-warning-hover-border-color);
+        }
+        &:disabled {
+            color: var(--btn-warning-disabled-text-color);
+            background-color: var(--btn-warning-disabled-bg-color);
+            border-color: var(--btn-warning-disabled-border-color);
+        }
+        &-primary {
+            color: var(--btn-warning-primary-text-color);
+            background-color: var(--btn-warning-primary-bg-color);
+            border-color: var(--btn-warning-primary-border-color);
+            &:hover {
+                color: var(--btn-warning-primary-hover-text-color);
+                background-color: var(--btn-warning-primary-hover-bg-color);
+                border-color: var(--btn-warning-primary-hover-border-color);
+            }
+            &:disabled {
+                color: var(--btn-warning-primary-disabled-text-color);
+                background-color: var(--btn-warning-primary-disabled-bg-color);
+                border-color: var(--btn-warning-primary-disabled-border-color);
+            }
         }
     }
 }
