--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -8,22 +8,22 @@ $margin-noteform: 30px;
     left: 5vw;
     width: calc(90vw - #{$margin-noteform * 2});
     max-width: 400px;
-    background-color: #FFF;
-    border-radius: .2rem;
+    background-color: $noteform-bg-color;
+    border-radius: 0.2rem;
     padding: 1rem;
     box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.4);
     .input {
         resize: none;
     }
     .btn {
-        margin-right: .5rem;
+        margin-right: 0.5rem;
         min-width: 130px;
         .fas {
-            margin-right: .4rem;
+            margin-right: 0.4rem;
         }
     }
     .title {
-        margin: .1rem 0 1.2rem 0;
+        margin: 0.1rem 0 1.2rem 0;
         font-weight: 400;
         font-size: 1.5rem;
     }
