--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,4 +1,3 @@
-
 body {
     background-color: $bg-color;
     font-family: $font-family;
@@ -11,12 +10,13 @@ body {
 }
 
 .slide-fade-enter-active {
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 }
 .slide-fade-leave-active {
-    transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+    transition: all 0.8s cubic-bezier(1, 0.5, 0.8, 1);
 }
-.slide-fade-enter, .slide-fade-leave-to {
+.slide-fade-enter,
+.slide-fade-leave-to {
     transform: translateX(10px);
     opacity: 0;
 }
