--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -1,34 +1,33 @@
 .input {
     display: block;
     width: calc(100% - 2rem);
-    padding: .5rem .7rem;
+    padding: 0.5rem 0.7rem;
     font-family: $font-family;
     font-weight: 400;
-    color: #495057;
-    background-color: #fff;
-    border: 1px solid #ced4da;
-    border-radius: .2rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    color: $input-text-color;
+    background-color: $input-bg-color;
+    border: 1px solid $input-border-color;
+    border-radius: 0.2rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     &:focus {
-        color: #495057;
+        color: $input-text-color;
         background-color: #fff;
-        border-color: #80bdff;
+        border-color: $input-focus-color;
         outline: 0;
-        box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
     }
     &-error {
         border-color: $warning-color;
         background-repeat: no-repeat;
-        background-position: 100% calc(.375em + .1875rem);
-        background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+        background-position: 100% calc(0.375em + 0.1875rem);
+        background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
     }
 }
-
 
 .msg {
     &-error {
         width: 100%;
-        margin-top: .25rem;
+        margin-top: 0.25rem;
         font-size: 80%;
         color: $warning-color;
     }
