--- a/src/styles/_statistics.scss
+++ b/src/styles/_statistics.scss
@@ -4,17 +4,17 @@
     width: 100%;
     max-width: 500px;
     justify-content: space-between;
-    background-color: #FFF;
+    background-color: $statistics-bg-color;
     border-radius: 0.2rem;
     padding: 2rem;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
     h1 {
         font-weight: 300;
-        margin: .1rem 0 0 0;
-        color: #333;
+        margin: 0.1rem 0 0 0;
+        color: $statistics-header-color;
     }
     span {
         font-weight: 300;
-        color: #777;
+        color: $statistics-value-color;
     }
 }
